--- a/po/pl.po
+++ b/po/pl.po
@@ -1,15 +1,15 @@
 # Polish translation for evolution-etesync.
-# Copyright © 2020 the evolution-etesync authors.
+# Copyright © 2020-2021 the evolution-etesync authors.
 # This file is distributed under the same license as the evolution-etesync package.
-# Piotr Drąg <piotrdrag@gmail.com>, 2020.
-# Aviary.pl <community-poland@mozilla.org>, 2020.
+# Piotr Drąg <piotrdrag@gmail.com>, 2020-2021.
+# Aviary.pl <community-poland@mozilla.org>, 2020-2021.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: evolution-etesync\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-11-29 11:59+0100\n"
-"PO-Revision-Date: 2020-11-29 12:00+0100\n"
+"POT-Creation-Date: 2021-05-02 12:20+0200\n"
+"PO-Revision-Date: 2021-05-02 12:21+0200\n"
 "Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
 "Language-Team: Polish <community-poland@mozilla.org>\n"
 "Language: pl\n"
@@ -27,8 +27,8 @@ msgstr "EteSync"
 msgid "For accessing EteSync servers using EteSync C API"
 msgstr "Dostęp do serwerów EteSync za pomocą API EteSync języka C"
 
-#: ../src/common/e-etesync-connection.c:903
-#: ../src/common/e-etesync-connection.c:1002
+#: ../src/common/e-etesync-connection.c:1026
+#: ../src/common/e-etesync-connection.c:1143
 msgid "Item not found"
 msgstr "Nie odnaleziono elementu"
 
@@ -94,8 +94,8 @@ msgid "EteSync account"
 msgstr "Konto EteSync"
 
 #: ../src/evolution/e-etesync-config-lookup.c:79
-msgid "EteSync end-to-end encrypts your contacts, calendars and tasks."
-msgstr "EteSync szyfruje kontakty, kalendarze i zadania."
+msgid "EteSync end-to-end encrypts your contacts, calendars, memos and tasks."
+msgstr "EteSync szyfruje kontakty, kalendarze, notatki i zadania."
 
 #: ../src/evolution/e-etesync-config-lookup.c:140
 msgid "Etebase server not found."
