NEWS update for 1.1.1

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,23 @@
+Evolution-EteSync 1.1.1 2023-03-03
+----------------------------------
+
+Translations:
+	Alan Mortensen (da)
+	Aurimas Černius (lt)
+	Balázs Úr (hu)
+	Boyuan Yang (zh_CN)
+	Emin Tufan Çetin (tr)
+	Fabio Tomat (fur)
+	Goran Vidović (hr)
+	Hugo Carvalho (pt)
+	Jordi Mas (ca)
+	Jürgen Benvenuti (de)
+	Marek Černocký (cs)
+	Мирослав Николић (sr)
+	Nathan Follens (nl)
+	Thibault Leclair (fr)
+	Zurab Kargareteli (ka)
+
 Evolution-EteSync 1.1.0 2021-07-09
 ----------------------------------
 
