--- a/po/ca.po
+++ b/po/ca.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/evolution-etesync/"
 "issues\n"
 "POT-Creation-Date: 2021-09-17 14:24+0000\n"
-"PO-Revision-Date: 2021-11-01 17:41+0100\n"
+"PO-Revision-Date: 2023-09-03 17:41+0100\n"
 "Last-Translator: maite guix <maite.guix@me.com>\n"
 "Language-Team: Catalan <gnome@llistes.softcatala.org>\n"
 "Language: ca\n"
@@ -47,7 +47,7 @@ msgstr "Sol·licitud d'autenticació del compte EteSync"
 #: ../src/credentials/e-credentials-prompter-impl-etesync.c:157
 #, c-format
 msgid "Please enter the correct credentials for account “%s”."
-msgstr "Introduïu les credencials correctes per al compte \"%s\"."
+msgstr "Introduïu les credencials correctes per al compte «%s»."
 
 #. Translators: This is part of a credential prompt, constructing for example: "Please enter the correct credentials for account “%s”.\n(host: hostname)"
 #: ../src/credentials/e-credentials-prompter-impl-etesync.c:161
@@ -102,11 +102,11 @@ msgstr "No s'ha trobat el servidor Etebase."
 
 #: ../src/evolution/e-etesync-config-lookup.c:142
 msgid "Failed connecting to server."
-msgstr "No s'ha pogut connectar amb al servidor."
+msgstr "No s'ha pogut connectar amb el servidor."
 
 #: ../src/evolution/e-etesync-config-lookup.c:147
 msgid "Requires password to continue."
-msgstr "Es requereix una contrasenya per continuar."
+msgstr "Es requereix una contrasenya per a continuar."
 
 #: ../src/evolution/e-etesync-config-lookup.c:182
 msgid ""
